--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ djangorestframework>=3.12,<4.0
 django-cors-headers>=3.5,<4.0
 paytmchecksum
 python-dotenv==1.0.0
-pscyopg2==2.9.9
+pscyopg2
 whiteNoise==6.7.0
 pytest==8.2.2
 requests==2.31.0
